--- a/urls.cfg
+++ b/urls.cfg
@@ -1,24 +1,12 @@
 crm=https://crm.hepta.co.id
 crs=https://crs.hepta.co.id
-web1=http://209.97.174.181
-web2=http://128.199.182.189
-web3=http://209.97.161.212
 http_proxy=https://hop.hepta.co.id
 srv=https://srv.hepta.co.id
-elasticsearch=http://178.128.117.246:9200
-kibana=http://178.128.117.246:5601
-ok=https://ok.hepta.co.id
-sap=https://sap.hepta.co.id
-efes=https://efes.co.id
-natasha=https://natasha.co.id
-naavagreen=https://naavagreen.id
+natasha-skin=https://natasha-skin.com
+naavagreen=https://naavagreen.com
 azqiara=https://azqiara.co.id
-klinik_natasha=https://klinik.natasha.co.id
 galeri_natasha=https://galeri.natasha.co.id
 galeri_naavagreen=https://galeri.naavagreen.id
 galeri_azqiara=https://galeri.azqiara.co.id
 hayclinic=https://hayclinic.hepta.co.id
 obelix=https://obelixhills.com
-rejayu=https://lp.rejayu.com
-renardblanc=https://id.renardblancskin.com
-kepompongemas=https://kepompongemas.id
